--- a/Algorithms Analysis and Design/Recursion/Combinations of a set of alphabets using JavaScript/writeup.html
+++ b/Algorithms Analysis and Design/Recursion/Combinations of a set of alphabets using JavaScript/writeup.html
@@ -21,9 +21,32 @@
         }
     </style>
 </head>
+<body>
+<div class="separator" style="clear: both;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiNNKbiwgmBGDaawSNJoF7KXRLucLauEmD_dUDzTx7ea1vvgOz6hY57s6a8d4Umxyagpb2SQmONyMkuCjJ1q8VhQdnYTi1UVm-pD4rYnGzwV153HLaK2jeS64aE0TiwOPHgzLaEMy0sKdFQ-gvpsv1h10dJlvSwufCZFK0YHUyew_2rnGT4Tq74lPVQ4fCa/s1500/algorithm.jpg" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" width="600" data-original-height="1000" data-original-width="1500" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiNNKbiwgmBGDaawSNJoF7KXRLucLauEmD_dUDzTx7ea1vvgOz6hY57s6a8d4Umxyagpb2SQmONyMkuCjJ1q8VhQdnYTi1UVm-pD4rYnGzwV153HLaK2jeS64aE0TiwOPHgzLaEMy0sKdFQ-gvpsv1h10dJlvSwufCZFK0YHUyew_2rnGT4Tq74lPVQ4fCa/s600/algorithm.jpg"/></a></div>
+
+<h1>Problem</h1>    
 
 <pre>
-/*
+Write a function that takes two parameters:
+A: a list of distinct alphabets
+n: a number that denotes the size of the selection we are going to make of the alphabets from the list A
+
+The output of the function should be a list of lists containing all the possible combinations of size n from the list of alphabets A.
+
+For example:
+solution(['A', 'B', 'C', 'D'], 2)
+Produces:
+
+[
+    [ 'A', 'B' ],
+    [ 'A', 'C' ],
+    [ 'A', 'D' ],
+    [ 'B', 'C' ],
+    [ 'B', 'D' ],
+    [ 'C', 'D' ]
+]</pre>
+
+<pre>/*
 Example 1:
 
 Combinations ([A,B,C,D], 3) is equal to:
@@ -122,3 +145,4 @@ console.log("~~~")
 
 */
 </pre>
+</body>
