--- a/Algorithms Analysis and Design/4 - Counting Elements/Swap The Elements (A problem on counting elements)/Swap The Elements (A problem on counting elements).html
+++ b/Algorithms Analysis and Design/4 - Counting Elements/Swap The Elements (A problem on counting elements)/Swap The Elements (A problem on counting elements).html
@@ -25,71 +25,71 @@
 <div class="separator" style="clear: both;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiNNKbiwgmBGDaawSNJoF7KXRLucLauEmD_dUDzTx7ea1vvgOz6hY57s6a8d4Umxyagpb2SQmONyMkuCjJ1q8VhQdnYTi1UVm-pD4rYnGzwV153HLaK2jeS64aE0TiwOPHgzLaEMy0sKdFQ-gvpsv1h10dJlvSwufCZFK0YHUyew_2rnGT4Tq74lPVQ4fCa/s1500/algorithm.jpg" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" width="600" data-original-height="1000" data-original-width="1500" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiNNKbiwgmBGDaawSNJoF7KXRLucLauEmD_dUDzTx7ea1vvgOz6hY57s6a8d4Umxyagpb2SQmONyMkuCjJ1q8VhQdnYTi1UVm-pD4rYnGzwV153HLaK2jeS64aE0TiwOPHgzLaEMy0sKdFQ-gvpsv1h10dJlvSwufCZFK0YHUyew_2rnGT4Tq74lPVQ4fCa/s600/algorithm.jpg"/></a></div>
 
 <h1><font color="#DD4100">Swap The Elements</font></h1>
-<h1 style="page-break-before:always; "><font color="#000000">Problem</font></h1>
-<p><font color="#000000">Problem: You are given an integer m (1 &lt;= m &lt;= 1 000 000) and two non-empty, zero-indexed arrays A and B of n integers, a0, a1, … , a(n-1) and b0, b1, ... , b(n-1) respectively (0 &lt;= ai , bi &lt;= m).</font></p>
-<p><font color="#000000"></font></p>
-<p><font color="#000000">The goal is to check whether there is a swap operation which can be performed on these arrays in such a way that the sum of elements in array A equals the sum of elements in array B after the swap. By swap operation we mean picking one element from array A and one element from array B and exchanging them.</font></p>
-<h1 style="page-break-before:always; "><font color="#000000">Example</font></h1>
-<p><font color="#000000">x = [3, 4, 2, 1, 0]</font></p>
-<p><font color="#000000">y = [3, 1, 4, 2, 2]</font></p>
-<p><font color="#000000">print(sum(x))</font></p>
-<p><font color="#000000">print(sum(y))</font></p>
-<p><font color="#000000"></font></p>
-<p><font color="#000000">Out:</font></p>
-<p><font color="#000000">10</font></p>
-<p><font color="#000000">12</font></p>
-<p><font color="#000000"></font></p>
-<p><font color="#000000"># Swapping '2 from y' with '1 from x'.</font></p>
-<p><font color="#000000">x = [3, 4, 2, <b></font><font color="#C9211E">2</b></font><font color="#000000">, 0]</font></p>
-<p><font color="#000000">y = [3, 1, 4, 2, <b></font><font color="#C9211E">1</b></font><font color="#000000">]</font></p>
-<p><font color="#000000">print(sum(x))</font></p>
-<p><font color="#000000">print(sum(y))</font></p>
-<p><font color="#000000"></font></p>
-<p><font color="#000000">Out:</font></p>
-<p><font color="#000000">11</font></p>
-<p><font color="#000000">11</font></p>
-<p><i><font color="#000000"># Also, on swapping '3 from y' and '2 from x'.</i></font></p>
-<p><i><font color="#000000">x = [3, 4, 3, 1, 0]</i></font></p>
-<p><i><font color="#000000">y = [2, 1, 4, 2, 2]</i></font></p>
-<p><i><font color="#000000">print(sum(x))</i></font></p>
-<p><i><font color="#000000">print(sum(y))</i></font></p>
-<p><i><font color="#000000"></i></font></p>
-<p><i><font color="#000000">Out: </i></font></p>
-<p><i><font color="#000000">11</i></font></p>
-<p><i><font color="#000000">11</i></font></p>
-<p><i><font color="#000000"></i></font></p>
-<p><i><font color="#000000"># Also, on swapping '4 from y' and '3 from x'.</i></font></p>
-<p><i><font color="#000000">x = [4, 4, 2, 1, 0]</i></font></p>
-<p><i><font color="#000000">y = [3, 1, 3, 2, 2]</i></font></p>
-<p><i><font color="#000000">print(sum(x))</i></font></p>
-<p><i><font color="#000000">print(sum(y))</i></font></p>
-<p><i><font color="#000000"></i></font></p>
-<p><i><font color="#000000">Out: </i></font></p>
-<p><i><font color="#000000">11</i></font></p>
-<p><i><font color="#000000">11</i></font></p>
-<h1 style="page-break-before:always; "><font color="#000000">Hint</font></h1>
-<p><font color="#000000">After the swap operation, the two sums (sum_a and sum_b) should become equal.</font></p>
-<p><font color="#000000"></font></p>
-<p><font color="#000000">And if initially, sum_b - sum_a = d</font></p>
-<p><font color="#000000"></font></p>
-<p><font color="#000000">This is total change we want.</font></p>
-<p><font color="#000000"></font></p>
-<p><font color="#000000">Now, since sum_b + sum_a = Constant (before and after the swap), we can then say:</font></p>
-<p><font color="#000000">Half of this change (viz. d/2) will come from side 'b' and half (viz. d/2) will come from side 'a'.</font></p>
-<p><font color="#000000">(This is equivalent to saying side 'a' and side 'b' will meet the halfway.)</font></p>
-<p><font color="#000000"></font></p>
-<p><font color="#000000">Since side 'b' is higher, we would have to swap a value B[i] with B[i] - d/2</font></p>
-<p><font color="#000000"></font></p>
-<p><font color="#000000">Now for this, we will loop through through side 'b' to find that B[i] for which 'B[i] - d/2' is in side 'a'.</font></p>
-<h1 style="page-break-before:always; "><font color="#000000">Brute Force Solution</font></h1>
-<p><font color="#000000">Solution O(n^2): The simplest method is to swap every pair of elements and calculate the totals. Using that approach gives us O(n^3) time complexity. A better approach is to calculate the sums of elements at the beginning, and check only how the totals change during the swap operation.</font></p>
+<h1 style="page-break-before:always; ">Problem</h1>
+<p>Problem: You are given an integer m (1 &lt;= m &lt;= 1 000 000) and two non-empty, zero-indexed arrays A and B of n integers, a0, a1, … , a(n-1) and b0, b1, ... , b(n-1) respectively (0 &lt;= ai , bi &lt;= m).</p>
+<p></p>
+<p>The goal is to check whether there is a swap operation which can be performed on these arrays in such a way that the sum of elements in array A equals the sum of elements in array B after the swap. By swap operation we mean picking one element from array A and one element from array B and exchanging them.</p>
+<h1 style="page-break-before:always; ">Example</h1>
+<p>x = [3, 4, 2, 1, 0]</p>
+<p>y = [3, 1, 4, 2, 2]</p>
+<p>print(sum(x))</p>
+<p>print(sum(y))</p>
+<p></p>
+<p>Out:</p>
+<p>10</p>
+<p>12</p>
+<p></p>
+<p># Swapping '2 from y' with '1 from x'.</p>
+<p>x = [3, 4, 2, <b><font color="#C9211E">2</font></b>, 0]</p>
+<p>y = [3, 1, 4, 2, <b><font color="#C9211E">1</font></b>]</p>
+<p>print(sum(x))</p>
+<p>print(sum(y))</p>
+<p></p>
+<p>Out:</p>
+<p>11</p>
+<p>11</p>
+<p><i># Also, on swapping '3 from y' and '2 from x'.</i></p>
+<p><i>x = [3, 4, 3, 1, 0]</i></p>
+<p><i>y = [2, 1, 4, 2, 2]</i></p>
+<p><i>print(sum(x))</i></p>
+<p><i>print(sum(y))</i></p>
+<p><i></i></p>
+<p><i>Out: </i></p>
+<p><i>11</i></p>
+<p><i>11</i></p>
+<p><i></i></p>
+<p><i># Also, on swapping '4 from y' and '3 from x'.</i></p>
+<p><i>x = [4, 4, 2, 1, 0]</i></p>
+<p><i>y = [3, 1, 3, 2, 2]</i></p>
+<p><i>print(sum(x))</i></p>
+<p><i>print(sum(y))</i></p>
+<p><i></i></p>
+<p><i>Out: </i></p>
+<p><i>11</i></p>
+<p><i>11</i></p>
+<h1 style="page-break-before:always; ">Hint</h1>
+<p>After the swap operation, the two sums (sum_a and sum_b) should become equal.</p>
+<p></p>
+<p>And if initially, sum_b - sum_a = d</p>
+<p></p>
+<p>This is total change we want.</p>
+<p></p>
+<p>Now, since sum_b + sum_a = Constant (before and after the swap), we can then say:</p>
+<p>Half of this change (viz. d/2) will come from side 'b' and half (viz. d/2) will come from side 'a'.</p>
+<p>(This is equivalent to saying side 'a' and side 'b' will meet the halfway.)</p>
+<p></p>
+<p>Since side 'b' is higher, we would have to swap a value B[i] with B[i] - d/2</p>
+<p></p>
+<p>Now for this, we will loop through side 'b' to find that B[i] for which 'B[i] - d/2' is in side 'a'.</p>
+<h1 style="page-break-before:always; ">Brute Force Solution</h1>
+<p>Solution O(n^2): The simplest method is to swap every pair of elements and calculate the totals. Using that approach gives us O(n^3) time complexity. A better approach is to calculate the sums of elements at the beginning, and check only how the totals change during the swap operation.</p>
 
 <div class="separator" style="clear: both;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiCJ5k82lAM91jnDyyM4JZUPTHYQpml5bfPn6uFiMECD9DHDyctaJwsaPeAGUJpxcWcWq5d7shof7Jixj_fpv2Civ6LtiyFlOlcva1yyvIK7-CIZuMfyAkoT-NsrJ1WlLgznXctGW0lubekBD1eE70zpGN6yQJHemLSWL1nrIuhPB4PSSRKknbtZbfnPYhM/s290/Screenshot%20from%202023-12-14%2018-20-31.png" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" width="600" data-original-height="261" data-original-width="290" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiCJ5k82lAM91jnDyyM4JZUPTHYQpml5bfPn6uFiMECD9DHDyctaJwsaPeAGUJpxcWcWq5d7shof7Jixj_fpv2Civ6LtiyFlOlcva1yyvIK7-CIZuMfyAkoT-NsrJ1WlLgznXctGW0lubekBD1eE70zpGN6yQJHemLSWL1nrIuhPB4PSSRKknbtZbfnPYhM/s600/Screenshot%20from%202023-12-14%2018-20-31.png"/></a></div>
 
-<h1 style="page-break-before:always; "><font color="#000000">Linear Time Complexity Solution</font></h1>
+<h1 style="page-break-before:always; ">Linear Time Complexity Solution</h1>
 <p>Solution O(n + m): The best approach is to count the elements of array A and calculate the diﬀerence d between the sums of the elements of array A and B.</p>
-<p><font color="#000000">For every element of array B, we assume that we will swap it with some element from array A. The diﬀerence d tells us the value from array A that we are interested in swapping, because only one value will cause the two totals to be equal. The occurrence of this value can be found in constant time from the array used for counting.</font></p>
-<h1 style="page-break-before:always; "><font color="#000000">Code</font></h1>
+<p>For every element of array B, we assume that we will swap it with some element from array A. The diﬀerence d tells us the value from array A that we are interested in swapping, because only one value will cause the two totals to be equal. The occurrence of this value can be found in constant time from the array used for counting.</p>
+<h1 style="page-break-before:always; ">Code</h1>
 <pre><i>
 def fast_solution(A, B, m):
   n = len(A)
