--- a/Algorithms Analysis and Design/Recursion/4_ Building a Tree from a BODMAS Expression (An exercise in Recursion)/slides.html
+++ b/Algorithms Analysis and Design/Recursion/4_ Building a Tree from a BODMAS Expression (An exercise in Recursion)/slides.html
@@ -24,8 +24,8 @@
 <body>
 <div class="separator" style="clear: both;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiNNKbiwgmBGDaawSNJoF7KXRLucLauEmD_dUDzTx7ea1vvgOz6hY57s6a8d4Umxyagpb2SQmONyMkuCjJ1q8VhQdnYTi1UVm-pD4rYnGzwV153HLaK2jeS64aE0TiwOPHgzLaEMy0sKdFQ-gvpsv1h10dJlvSwufCZFK0YHUyew_2rnGT4Tq74lPVQ4fCa/s1500/algorithm.jpg" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" width="600" data-original-height="1000" data-original-width="1500" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiNNKbiwgmBGDaawSNJoF7KXRLucLauEmD_dUDzTx7ea1vvgOz6hY57s6a8d4Umxyagpb2SQmONyMkuCjJ1q8VhQdnYTi1UVm-pD4rYnGzwV153HLaK2jeS64aE0TiwOPHgzLaEMy0sKdFQ-gvpsv1h10dJlvSwufCZFK0YHUyew_2rnGT4Tq74lPVQ4fCa/s600/algorithm.jpg"/></a></div>
 
-<h1><font color="#DD4100">Building a Tree (in JavaScript) from a BODMAS Expression</font></h1>
-<h1 style="page-break-before:always; "><font color="#000000">Problem (1) using JavaScript</font></h1>
+<!-- Building a Tree (in JavaScript) from a BODMAS Expression -->
+
 <p><font color="#000000">There is an expression with N variables as in A, B, C, X, Y, Z. Note that variables do not repeat. And N-1 variables which can be +,-,*, and /</font></p>
 <p><font color="#000000"></font></p>
 <p><font color="#000000">For example: </font></p>
