--- a/Data Science Interview Preparation/Machine Learning Interview Preparation by the Help of Gemini/Day 2: Some complex questions on Bot Dectection Project on Twitter Data For Infosys Digital Marketing Team/writeup.html
+++ b/Data Science Interview Preparation/Machine Learning Interview Preparation by the Help of Gemini/Day 2: Some complex questions on Bot Dectection Project on Twitter Data For Infosys Digital Marketing Team/writeup.html
@@ -1,9 +1,34 @@
+<head>
+    <script crossorigin="anonymous" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  
+    <!-- Google AdSense Using Machine Learning Code -->
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-3071098372371409",
+            enable_page_level_ads: true
+        });
+    </script>
+    <style>
+        pre {
+            white-space: pre-wrap;
+            white-space: -moz-pre-wrap;
+            white-space: -pre-wrap;
+            white-space: -o-pre-wrap;
+            word-wrap: break-word;
+        }
+    </style>
+</head>
+
+<div class="separator" style="clear: both;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgV15mTjt9pylwO71AdM2wjdRIn6Ep5DyYgs2UG_6iR3-Qj6t_72CroBZCJGdz51VIgTYMVuZc2Vx5IMx_73M94cyhLoUNq3H2qL67V2RPj2fGHFoRPmcp1q6ridD86JJP_pmzong8O1A53PZnuGtiD2FLNsPabFrRvESa6YH91sJRSiyRPoOji2XjscGU9/s1300/Gemini.jpg" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" width="600" data-original-height="731" data-original-width="1300" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgV15mTjt9pylwO71AdM2wjdRIn6Ep5DyYgs2UG_6iR3-Qj6t_72CroBZCJGdz51VIgTYMVuZc2Vx5IMx_73M94cyhLoUNq3H2qL67V2RPj2fGHFoRPmcp1q6ridD86JJP_pmzong8O1A53PZnuGtiD2FLNsPabFrRvESa6YH91sJRSiyRPoOji2XjscGU9/s600/Gemini.jpg"/></a></div>
+
 <pre>
 <h2>Can you ask some complex questions for this use case from my resume:
-Bot Detection on Twitter using Sentiment Analysis for Digital Marketing at Infosys
+Bot Detection on Twitter using Sentiment Analysis for Digital Marketing Team at Infosys
 Underlying Theory: Humans are more opinionated than bots. And, humans flip flop in terms of their sentiment more than bots do.</h2>
 
-<p data-sourcepos="1:1-1:147">Here are some complex questions related to your experience with Bot Detection on Twitter using Sentiment Analysis for Digital Marketing at Infosys:</p><p data-sourcepos="3:1-3:39"><strong>Data Acquisition and Preprocessing:</strong></p><ol data-sourcepos="5:1-10:0">
+<p data-sourcepos="1:1-1:147">Here are some complex questions related to your experience with Bot Detection on Twitter using Sentiment Analysis for Digital Marketing Team at Infosys:</p><p data-sourcepos="3:1-3:39"><strong>Data Acquisition and Preprocessing:</strong></p><ol data-sourcepos="5:1-10:0">
 <li data-sourcepos="5:1-6:0">
 <p data-sourcepos="5:4-5:415"><strong>Beyond Keywords:</strong>  While humans might express more opinions than bots, some bots can be sophisticated and mimic human behavior. How did you address the challenge of bots potentially using keywords or phrases associated with opinions to bypass detection based on your underlying theory?  Did you explore any techniques to identify more nuanced linguistic features that differentiate human and bot language use?</p>
 </li>
@@ -35,3 +60,4 @@ Underlying Theory: Humans are more opinionated than bots. And, humans flip flop 
 </li>
 </ol><p data-sourcepos="27:1-27:193">These questions delve deeper into the technical aspects, challenges, and potential future improvements of your bot detection approach using sentiment analysis for digital marketing at Infosys.</p>
 </pre>
+<span style="display: none;">Tags: Technology,Interview Preparation,Natural Language Processing,Machine Learning,</span>
