--- a/Artificial Intelligence/Agentic AI by Andrew Ng at DeepLearning.ai/writeup.html
+++ b/Artificial Intelligence/Agentic AI by Andrew Ng at DeepLearning.ai/writeup.html
@@ -161,87 +161,134 @@
 <pre>Legend:
 M: Module
 L: Lesson</pre>
-
+<br>
 <h2>M1 - Introduction to Agentic Workflows</h2>
-
+<br>
 <h3>M1L2 - What is Agentic AI</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQS6GONvcVoZG8XmL0L5fPn4PBskPUZ6rJUaCNajBEcVrpmGGnvp01awL5of0YIR_cbLtSlbEgk1iVh/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
 <h3>M1L3 - Degrees of Autonomy</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTE5s05cA-VJdJ1sPowSmuWeYy-RbU0J8nPILwOHYJeH7Kttc66NoxSzTmNcN7DpIrWJsZvsGNZpJ2P/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
 <h3>M1L4 - Benefits of Agentic AI</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTZznjzYmTuLhAwlos0GbVzqWPi2FnQuYXqMrH_0c23ijQpefD_SPBsq2O1z5U3h_HqNHV1HeugHb9A/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
 <h3>M1L5 - Agentic AI Applications</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQvJOHvEzVw1Vt77AHnP7etloEA5QJTQNSeM-bioRpXvvp9C9V_p4hAzwkPFx7TFA/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
 <h3>M1L6 - Task Decomposition - Identifying the steps in a workflow</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQoXutyyUSZJbjMg4rmyi0Js_LQ-f80eys36IpCGxYvA2s3fzV4fNiBfzKHA06sXg/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
 <h3>M1L7 - Evaluating Agentic AI (evals)</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRCT51i2p2uzxQxV_vOuP3ccg6w4434rMtCfDMwCQKbVAMQeTDGR_oN2HaeXnIMnA/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
 <h3>M1L8 - Agentic Design Patterns</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQbEgs6sVp_bwO0aNzV6RWo6opHDp5UCEVh044tePJFsQDFT4vzCCaYbQkYzGINuw/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
 <h3>M1L9 - Quiz</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vS7FeAPpcrp6kWP1V4CBU3HL6wMeeM5FkQO0fVgURHL4bd3Le71K0f4CMmFOjyddw/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
+<h3><a class="customLink" href="https://github.com/ashishjain1547/agentic_ai_course_by_andrew_ng_at_deeplearning_ai/tree/main/M1/M1_Ungraded%20Lab" target="_blank">Setup Steps (part of module-1 lab)</a></h3>
+<br>
 <h2>M2 - Reflection Design Pattern</h2>
-
+<br>
 <h3>M2L1 - Reflection to improve outputs of a task</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTVwfryqPXkGcD79vn4YhA0cg52rLcEc5S_wBbu9OVSYSwtwAJZE844pfwtBZ9Tfw/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
 <h3>M2L2 - Why not just direct generation</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTbANtTU98LM7fLZ_PWaUlfnV4wuGtMW1OkBphWg7qaB25NXK3cI6UmALDrJL2plQ/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
 <h3>M2L3 - Chart Generation Workflow</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTtO6uYCLHYHVVZRNcLTN903q5bK4aWkoA16oIYZu6xlXlgbhZJA09-PYepWfCAfg/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
 <h3>M2L4 - Evaluating the impact of reflection</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQF2NfPSJuEdSZ7IYc6FtFzyGK2ttIrJQeO-s-Ogq_-GAbV8GHO_T9I2D1YKn2Fcw/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
 <h3>M2L5 - Using External Feedback</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT8YRG7VgiM95bn3XluB9hoK-Qy2Fkq9vLloay-jqd46-DOcOhmkhvRhRcv8wIvdQ/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
 <h3>M2L6 - Quiz</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQWj_6W7ogX7t5UaVv24bfBEVCpI561hVOWswPMGzxVp_zqGUnld4Ns9uHTMOz6Tg/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<br>
+<h3><a class="customLink" href="https://github.com/ashishjain1547/agentic_ai_course_by_andrew_ng_at_deeplearning_ai/tree/main/M2" target="_blank">Open Module-2 Lab Assignments</a></h3>
 
 <h2>M3 - Tool Use</h2>
-
+<br>
 <h3>M3L1 - What Are Tools</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSpVBWPnkrwNGWiTdnolXnbbRdK3XwdaTbpJhh4MypYOnRhntfX0UcoMfnhtCdNyQ/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
 <h3>M3L2 - Creating a Tool</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTLmFvD2jNhzsAD_4F_BeIoDgYNuhjRmZIGK7KOsI69E8gvH1YbUldKmqBeZNoQag/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
 <h3>M3L3 - Tool Syntax</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTlVcp-VSpW8PqBpUUeVYomU5KVjtTeeWWgOmcTQED0r3O1qQPHoDRFb8YR-42qQg/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
 <h3>M3L4 - Code Execution</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTG3HLwUrVO_w62eUjtGqT3medtZLhn4OAneeTmCr-kKEs2hJzKEdcLXYBYzNu9RQ/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+<br>
 <h3>M3L5 - MCP</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRlaTtjWARgZZ6jNA4hXyXLsPOveQsk0zlp2CvsznaFar6CXBcsR_AiBmS9fj_CMQ/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<br>
+<h3>M3L6 - Quiz</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTnlQFmtMYJcH-mmEsHf9NcZpKmFdadcPbtN0Q7WX9oajzZGByR3fCuQlhOzM4bBYLSJZjK4d4mBJ4D/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<br>
+<h3><a class="customLink" href="https://github.com/ashishjain1547/agentic_ai_course_by_andrew_ng_at_deeplearning_ai/tree/main/M3" target="_blank">Open Module-3 Lab Assignments</a></h3>
+
+<h2>M4 - Practical Tips for Building Agentic AI</h2>
+<br>
+<h3>M4L1 - Evaluations (evals)</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTY3-DeNJE4vv8lWZ6YQgNBoVpk39jX2OBo-hYjbhjOhvPWsKp0FF-eN5-WGIQgICp7htKT2vGbjpBW/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<br>
+<h3>M4L2 - Error Analysis and prioritizing next steps</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQcPLlh45izbQzLsImOCvp7iH4PPjtGqXOU3VdAuJQW3dfcGzFS913K8lMdMHiUQclV1xKwd_yhDWC1/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<br>
+<h3>M4L3 - More error analysis examples</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQaRwHkcKNVl30egYC5JOgLB2ZumjeVeYVSHooXCec_F-x8cs0XV6bzESMXp0eyBc6y7093UqaKdOjW/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<br>
+
+<h3>M4L4 - Component-level evaluations</h3>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTCMxeVhhMNVovcBwjfj_bxFTmUrU_5jac9UnOM0s4Xj1N7LZ-s8g2w7a7vI5M-S-qeCNB-t5-xTN1g/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<br>
+<h3>M4L5 - How to address problems you identify</h3>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQAcZ08DJViHf4jdJ1tJmdAS1H61DtEkMDmeMXvNxSFFF8yOxXeJ93fQwQonWb1-Y7ypGbyONmIFTvk/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<br>
+<h3>M4L6 - Latency, cost optimization</h3>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQX9r21OKj7NXB5PfmFV4JnasVZa37jETDD2QQAWHGstW-D5dENpp0pZcvJIj0pmsxDtUvTATE4-kWm/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<br>
+<h3>M4L7 - Development process summary</h3>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSJIiCtJQloJHhhSL0NY4Oe7Y0IR72eegykCyEHxT-xWAHNvO4rpLBSo7Rb_vTPVNa1oWbeTE4gliCV/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<br>
+<h3>M4L8 - Quiz</h3>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQd4t4YeO7IUMbm8o034WCFjgCRJD2kg7GD6kzVZ5PgOilGRtCH6YY3L_jZ8yQSCHS3B4OPfkMEEW3O/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+
+<h3><a class="customLink" href="https://github.com/ashishjain1547/agentic_ai_course_by_andrew_ng_at_deeplearning_ai/tree/main/M4_Ungraded%20Lab_1" target="_blank">Open Module-4 Lab Assignment</a></h3>
 
 <span style="opacity: 0;">Tags: Technology,Agentic AI,Artificial Intelligence,</span>
