--- a/Artificial Intelligence/Agentic AI by Andrew Ng at DeepLearning.ai/writeup.html
+++ b/Artificial Intelligence/Agentic AI by Andrew Ng at DeepLearning.ai/writeup.html
@@ -160,7 +160,7 @@
 
 <pre>Legend:
 M: Module
-L: Lesson</pre>
+L: Lesson
 <br>
 <h2>M1 - Introduction to Agentic Workflows</h2>
 <br>
@@ -291,4 +291,38 @@ L: Lesson</pre>
 
 <h3><a class="customLink" href="https://github.com/ashishjain1547/agentic_ai_course_by_andrew_ng_at_deeplearning_ai/tree/main/M4_Ungraded%20Lab_1" target="_blank">Open Module-4 Lab Assignment</a></h3>
 
-<span style="opacity: 0;">Tags: Technology,Agentic AI,Artificial Intelligence,</span>
+
+<h2>M5 - Patterns for Highly Autonomous Agents</h2>
+
+<h3>M5L1 - Planning Workflows</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQgpQK_iP2F5ICPqyqN3Co5fVTsPk3JKUuZgrwcE-y7fIH6Wt98maEJehAlseEMWQ5n-ZJ4l0DC2pF6/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+
+<h3>M5L2 - Creating and executing LLM plans</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTAvjA60QlJKCyne5cQ6HuTLU7fz7_pmdHA392EjtKjvynYMAmDTFFB36pBHgB-VpClKlk2cGmMUvNJ/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+
+<h3>M5L3 - Planning with code execution</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT02E3mghkQm2-lQMZ_nef65qgnAvDojanostqNm96ruqHw2zIZIjhGjH_2X-w41Z7C0DuL1ymlB7vT/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+
+<h3>M5L4 - Multi-agentic workflows</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRJksEaiWYkryfnX9UkTDV6QH9lVWS0zj9u9WFHoKZAHSiH7vvlI623x-3Aoxzymtabs-Yki6NEk8xq/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+
+<h3>M5L5 - Communication patterns for multi-agent systems</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSmMrrRq5nRMUR_M_z5Y-WtsiahHqwgH8DGpBl_laeYzYaA_Y64i-OBxY-h0RxDnp_FKlOaJbun43da/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+
+<h3>M5L6 - Quiz</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSdWNiSSI1An5igiPEep8QX7r8qcy-FJhDUy13NsAbA7rag7c7L5WcenTvvz_eWr0DAo5s3A3Ojlbhl/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<h3><a class="customLink" href="https://github.com/ashishjain1547/agentic_ai_course_by_andrew_ng_at_deeplearning_ai/tree/main/M5" target="_blank">Open Module-5 Lab Assignments</a></h3>
+
+<span style="opacity: 0;">Tags: Technology,Agentic AI,Artificial Intelligence,</span></pre>
