--- a/DeepLearning.ai Courses/RAG in Action (By Zain Hasan at DeepLearning.ai)/writeup.html
+++ b/DeepLearning.ai Courses/RAG in Action (By Zain Hasan at DeepLearning.ai)/writeup.html
@@ -155,12 +155,16 @@
 
 <br>
 
+<b><i>New Addition: Module 2!</i></b>
+
+<div class="separator" style="clear: both;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjQ3TKzvBAocApcUjknZ8_jZdtEpKhIgNQXRdOQov5RtfgvbEQljHkMcrJJk4_bx_gNMlkJJG6BqVTNprmjLd5dK-353Ulj6UrgVbbOywJx076cLNuVpUfvKzFq8xyD4js36eODrCl8QO0QeYSO6OkcUwPHrXMMLExdnlomLh5_wiW-V_LUWvLshSU7raM7/s680/New%20Addtion%20--%20Module%202.png" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" width="600" data-original-height="453" data-original-width="680" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjQ3TKzvBAocApcUjknZ8_jZdtEpKhIgNQXRdOQov5RtfgvbEQljHkMcrJJk4_bx_gNMlkJJG6BqVTNprmjLd5dK-353Ulj6UrgVbbOywJx076cLNuVpUfvKzFq8xyD4js36eODrCl8QO0QeYSO6OkcUwPHrXMMLExdnlomLh5_wiW-V_LUWvLshSU7raM7/s600/New%20Addtion%20--%20Module%202.png"/></a></div>
+
+...
+
 <div class="separator" style="clear: both;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh_cxhWw3lAocXaFgFFbSbh_G7qHXY1VtqCmZor-WT7myNrKwonHxfOlVAj4PEKmuqACxzKtQ3Bi0RW9-j4ex-KNnQB_sSPni7j5jWfyhRE-tEgq9qWFKaLbGwADmM70ROmeL7KVrsdjfKICu6R_ddBqkOnessNTc80xciy9jYRZHyT-rL_CyJdIBbgYElz/s502/Screenshot%20from%202025-11-24%2021-54-46.png" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" width="600" data-original-height="460" data-original-width="502" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh_cxhWw3lAocXaFgFFbSbh_G7qHXY1VtqCmZor-WT7myNrKwonHxfOlVAj4PEKmuqACxzKtQ3Bi0RW9-j4ex-KNnQB_sSPni7j5jWfyhRE-tEgq9qWFKaLbGwADmM70ROmeL7KVrsdjfKICu6R_ddBqkOnessNTc80xciy9jYRZHyT-rL_CyJdIBbgYElz/s600/Screenshot%20from%202025-11-24%2021-54-46.png"/></a></div>
 
-
-<pre>
 <h2>Module 1: RAG Overview</h2>
-
+<pre>
 <h3>M1L2  - Introduction to the course on "RAG"</h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQEUSrJIDS-NchDfeYPHoJBqoYSdDKAXy58wOJoaG-WoRMLgXbUyb5BwDlTrvQ8dr_tBM4nniF1nqSR/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
@@ -190,4 +194,50 @@
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRGGQcovPSLgPpZo4h8JniZI8aAAw8rMQodL7PdIwX0o_Fv2VZY13m_B1EW_TuFMkzD7hw6vci9tHuZ/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 <h3><a class="customLink" href="https://github.com/ashishjain1547/deeplearningai_labs/tree/main/Retrieval%20Augmented%20Generation%20(By%20Zain%20Hasan)/Module%201%20-%20RAG%20Overview" target="_blank">Open Module-1 Labs</a></h3>
+</pre>
+
+<h2>Module 2: Information Retrieval and Search Foundations</h2>
+<pre>
+<h3>M2L1 - Introduction</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRfLteMKhXryqCSf1hIQHU3AmbScGQWLNSt6eExmDgMzMAMf-gYzX6RFweW3JyqQUjAGU5wjbJwo5zs/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<h3>M2L2 - Retriever Architecture Overview</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSjO4vqO8Ibm69szu_zvO0-fxo-i4Xzr6hEpJV3Oi1loXxHQcx6tqM-KRJdeYFq4ZjxndBMpqZXvD13/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<h3>M2L3 - Metadata Filtering</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTHG3dxqL4kDzIeh-_sbRK2kGo7wLPT3TQcH4digIuESDqQ5_CO_OnPMSKQF9lBNEg8We_r8D3zOW7W/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<h3>M2L4 - Keyword Search Using TF-IDF</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSGffbTZcxBFgo38nwWepDBVajNNhvydS0FzHkxkXYKeiFBddYe0ou1tr2x32hAlZe8RjJvxCb5prYJ/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<h3>M2L5 - Keyword Search - BM25</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSKA35krpadrb91lMvEEjxLDDliccg4Yo53LiXRn98X5sa0OZEFsMYlVBR1opBpUa21EJ0SsBO3nsD4/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<h3>M2L6 - Semantic Search - Introduction</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRqhHhhdAe_Aq-xo2BB5WBtb6kAHahbdoyHMS2Bw1o9f7iixlRMWzioyR2EHMI82ThPGZfbXP2CsGON/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<h3>M2L7 - Hybrid Search</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT9jmtRhin1gwagbksTJJ3ZO1Vzf4NpwqKDe8Ag0PfMUlbeu6_uzErSWq3xX6Pc12piIBX6--mH4MoX/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<h3>M2L8 - Evaluating Retrieval</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR-HJURgaoNJGeMxQkAOsGI9fP3hZeV7i859-sWD1Ti2YYHuhYMCm6Dj4Omx5Iw1geYeSQd1hujYb4z/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<h3>M2L9 - Semantic Search - Embedding Model Deepdive</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSqPpTXVA3hppfCj9sph7gnjmvH1_dEv8M0Bkmit1E54u0wSTwwek9nJ6gAquGDJ0KpJKGtgdx6M53U/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<h3>M2L10 - Quiz</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSAYx4djQatQvWQrbdbjJN_9U7S1CLoK5Dz2hVDAJY3naS65yLIHfP_pQ_umQiDq2U4RIO22FE92QtF/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<h3><a class="customLink" href="https://github.com/ashishjain1547/deeplearningai_labs/tree/main/Retrieval%20Augmented%20Generation%20(By%20Zain%20Hasan)/Module%202%20-%20Information%20Retrieval%20and%20Search%20Foundations
+" target="_blank">Open Module-2 Labs</a></h3>
 </pre>
