--- a/Artificial Intelligence/8 Free Short Courses on Vibe-Coding at DeepLearning.AI/writeup.html
+++ b/Artificial Intelligence/8 Free Short Courses on Vibe-Coding at DeepLearning.AI/writeup.html
@@ -203,7 +203,13 @@ Building Coding Agents with Tool Execution
 <a href="https://learn.deeplearning.ai/courses/building-code-agents-with-hugging-face-smolagents/lesson/txu26/introduction" target="_blank">
 Building Code Agents with Hugging Face smolagents
 <div class="separator" style="clear: both;"><img alt="" border="0" width="600" data-original-height="448" data-original-width="520" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgZ9YjbBBM_ws3gUVXuXIAQ2NdHimoImUBOIANvi13tRG6vAmqeXM2Wq3SkCmxCageJ6YgwCN1NzxdJwshS_zXW65jXxGh384z5LlQgTgAs-F0BGQJr9KtiidrT9stGq-80Kw-YdRia390rmQ9YJWBMvlpeSo48jEzpp2Eztr41ReJE_k7V1oTRbxGL5Wjt/s600/Building%20Code%20Agents%20with%20Hugging%20Face%20smolagents.png"/></div></a>
+
+
+8:
+<a href="https://learn.deeplearning.ai/courses/gemini-cli-code-and-create-with-an-open-source-agent" target="_blank">
+Gemini CLI: Code & Create with an Open-Source Agent
+<div class="separator" style="clear: both;"><img alt="" border="0" width="600" data-original-height="588" data-original-width="712" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjUtcEVZHBD-HLs_ZA-zAGnir89mS-r5Khrr7zNKY39dYuO3s5IYrPmLCRlZ5wGNI6UM3GAtgGZXavFSgOqeZBHFSubSm8LyOLEmcQHi5G8ok-ZMHW63B_J0deovByClKq7UH8NXDirAB5dEzrsMJtWhGusmglbvhJbh2pr-KKdET-1zESbGze3NFzaMQ7W/s600/Google%20Gemini%20CLI.png"/></div></a>
+
 </pre>
 
-
-<span style="opacity: 0;">Tags: Artificial Intelligence,Generative AI,Agentic AI,Technology,YouTube Academy,</span>
+<span style="opacity: 0;">Tags: Artificial Intelligence,YouTube Academy,</span>
