--- a/DeepLearning.ai Courses/RAG in Action (By Zain Hasan at DeepLearning.ai)/writeup.html
+++ b/DeepLearning.ai Courses/RAG in Action (By Zain Hasan at DeepLearning.ai)/writeup.html
@@ -154,12 +154,9 @@
 <a class="customLink" href="https://learn.deeplearning.ai/courses/retrieval-augmented-generation/lesson/rrngb/a-conversation-with-andrew-ng" target="_blank">View Course on DeepLearning.ai</a>
 
 <br>
-
-<b><i>New Addition: Module 2!</i></b>
-
+<!-- 
 <div class="separator" style="clear: both;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjQ3TKzvBAocApcUjknZ8_jZdtEpKhIgNQXRdOQov5RtfgvbEQljHkMcrJJk4_bx_gNMlkJJG6BqVTNprmjLd5dK-353Ulj6UrgVbbOywJx076cLNuVpUfvKzFq8xyD4js36eODrCl8QO0QeYSO6OkcUwPHrXMMLExdnlomLh5_wiW-V_LUWvLshSU7raM7/s680/New%20Addtion%20--%20Module%202.png" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" width="600" data-original-height="453" data-original-width="680" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjQ3TKzvBAocApcUjknZ8_jZdtEpKhIgNQXRdOQov5RtfgvbEQljHkMcrJJk4_bx_gNMlkJJG6BqVTNprmjLd5dK-353Ulj6UrgVbbOywJx076cLNuVpUfvKzFq8xyD4js36eODrCl8QO0QeYSO6OkcUwPHrXMMLExdnlomLh5_wiW-V_LUWvLshSU7raM7/s600/New%20Addtion%20--%20Module%202.png"/></a></div>
-
-...
+...-->
 
 <div class="separator" style="clear: both;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh_cxhWw3lAocXaFgFFbSbh_G7qHXY1VtqCmZor-WT7myNrKwonHxfOlVAj4PEKmuqACxzKtQ3Bi0RW9-j4ex-KNnQB_sSPni7j5jWfyhRE-tEgq9qWFKaLbGwADmM70ROmeL7KVrsdjfKICu6R_ddBqkOnessNTc80xciy9jYRZHyT-rL_CyJdIBbgYElz/s502/Screenshot%20from%202025-11-24%2021-54-46.png" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" width="600" data-original-height="460" data-original-width="502" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh_cxhWw3lAocXaFgFFbSbh_G7qHXY1VtqCmZor-WT7myNrKwonHxfOlVAj4PEKmuqACxzKtQ3Bi0RW9-j4ex-KNnQB_sSPni7j5jWfyhRE-tEgq9qWFKaLbGwADmM70ROmeL7KVrsdjfKICu6R_ddBqkOnessNTc80xciy9jYRZHyT-rL_CyJdIBbgYElz/s600/Screenshot%20from%202025-11-24%2021-54-46.png"/></a></div>
 
@@ -240,4 +237,36 @@
 
 <h3><a class="customLink" href="https://github.com/ashishjain1547/deeplearningai_labs/tree/main/Retrieval%20Augmented%20Generation%20(By%20Zain%20Hasan)/Module%202%20-%20Information%20Retrieval%20and%20Search%20Foundations
 " target="_blank">Open Module-2 Labs</a></h3>
+
+<h2>Module 3 - Information Retrieval with Vector Databases</h2>
+
+<a href="https://github.com/ashishjain1547/deeplearningai_labs/blob/main/Retrieval%20Augmented%20Generation%20(By%20Zain%20Hasan)/Lecture%20Notes/RAG_M3.pdf" class="customLink" target="_blank">Lecture Notes</a>
+
+<a href="https://github.com/ashishjain1547/deeplearningai_labs/tree/main/Retrieval%20Augmented%20Generation%20(By%20Zain%20Hasan)/Module%203%20-%20Information%20Retrieval%20with%20Vector%20Databases" class="customLink" target="_blank">Lab - Module 3</a>
+
+<h3>Quiz</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQXd_33cxrsfNkr_CI9VoteLtf_QLq13R-qtrb8gROmwBMK9mQ4NCIhbI2QI5u3xliwJMIjAZbMZoOl/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<h2>Module 4 - LLMs and Text Generation</h2>
+
+<a href="https://github.com/ashishjain1547/deeplearningai_labs/blob/main/Retrieval%20Augmented%20Generation%20(By%20Zain%20Hasan)/Lecture%20Notes/RAG_M4.pdf" class="customLink" target="_blank">Lecture Notes</a>
+
+<a href="https://github.com/ashishjain1547/deeplearningai_labs/tree/main/Retrieval%20Augmented%20Generation%20(By%20Zain%20Hasan)/Module%204%20-%20LLMs%20and%20Text%20Generation" class="customLink" target="_blank">Lab - Module 4</a>
+
+<h3>Quiz</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQ3laaKeKpU0xzcXRz05mP3EnS5X_kafglkVvcEwHH-86RAUi0ieeVb-9LvFtgy1hf09Yvj1ycLCALp/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<h2>Module 5 - RAG Systems in Production</h2>
+
+<a href="https://github.com/ashishjain1547/deeplearningai_labs/blob/main/Retrieval%20Augmented%20Generation%20(By%20Zain%20Hasan)/Lecture%20Notes/RAG_M5.pdf" class="customLink" target="_blank">Lecture Notes</a>
+
+<a href="https://github.com/ashishjain1547/deeplearningai_labs/tree/main/Retrieval%20Augmented%20Generation%20(By%20Zain%20Hasan)/Module%205%20-%20RAG%20Systems%20in%20Production" class="customLink" target="_blank">Lab - Module 5</a>
+
+<h3>Quiz</h3>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSQqW_kei2ho3xIEWKkpG2iFFxS3mhDDfyEHpKKB1x7ef7AimaVu2_3ES4KnUidI2CB94_eyYdxhMuc/pubembed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
 </pre>
+
